Fix horizontal scrolling on home page

--- a/_includes/styles/home.css
+++ b/_includes/styles/home.css
@@ -3,8 +3,10 @@
 }
 
 #home .container {
+  overflow-x: hidden;
   padding-left: 60px;
   padding-top: 40px;
+  position: relative;
 }
 
 #home video {
